fix: text even clearer on mobile

--- a/css/winners.css
+++ b/css/winners.css
@@ -36,6 +36,10 @@ body {
     .container {
         background: rgba(0,0,0,0.3);
     }
+
+    body {
+        background: url(../img/back.jpg) no-repeat center center fixed;
+    }
 }
 
 iframe {
